--- a/refs.bib
+++ b/refs.bib
@@ -204,3 +204,57 @@ language={English}
  isbn = {9400736398, 9789400736399},
  publisher = {Springer Publishing Company, Incorporated},
 }
+
+@article{citeulike:5802354,
+    abstract = {{We present the propositional fragment CLF 0 of the Concurrent Logical Framework (CLF). CLF extends the Linear Logical Framework to allow the natural representation of concurrent computations in an object language. The underlying type theory uses monadic types to segregate values from computations. This separation leads to a tractable notion of definitional equality that identifies computations differing only in the order of execution of independent steps. From a logical point of view our type theory can be seen as a novel combination of lax logic and dual intuitionistic linear logic. An encoding of a small Petri net exemplifies the representation methodology, which can be summarized as  ”  concurrent computations as monadic expressions”.}},
+    author = {Watkins, Kevin and Cervesato, Iliano and Pfenning, Frank and Walker, David},
+    citeulike-article-id = {5802354},
+    citeulike-linkout-0 = {http://www.springerlink.com/content/fwlrpm102djtlaeb},
+    journal = {Types for Proofs and Programs},
+    keywords = {concurrency, hereditary-substitution, linear-logic, logical-frameworks},
+    pages = {355--377},
+    posted-at = {2014-07-29 16:56:16},
+    priority = {0},
+    title = {{A Concurrent Logical Framework: The Propositional Fragment}},
+    url = {http://www.springerlink.com/content/fwlrpm102djtlaeb},
+    year = {2004}
+}
+@article{Harper-Licata-2007,
+ author = {Harper, Robert and Licata, Daniel R.},
+ title = {Mechanizing Metatheory in a Logical Framework},
+ journal = {J. Funct. Program.},
+ issue_date = {July 2007},
+ volume = {17},
+ number = {4-5},
+ month = jul,
+ year = {2007},
+ issn = {0956-7968},
+ pages = {613--673},
+ numpages = {61},
+ url = {http://dx.doi.org/10.1017/S0956796807006430},
+ doi = {10.1017/S0956796807006430},
+ acmid = {1296842},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+}
+
+@article{Harper-Honsel-Plotkin,
+ author = {Harper, Robert and Honsell, Furio and Plotkin, Gordon},
+ title = {A Framework for Defining Logics},
+ journal = {J. ACM},
+ issue_date = {Jan. 1993},
+ volume = {40},
+ number = {1},
+ month = jan,
+ year = {1993},
+ issn = {0004-5411},
+ pages = {143--184},
+ numpages = {42},
+ url = {http://doi.acm.org/10.1145/138027.138060},
+ doi = {10.1145/138027.138060},
+ acmid = {138060},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {formal systems, interactive theorem proving, proof checking, typed lambda calculus},
+}
+
