--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,7 @@
 \title{Type theory and its meaning explanations}
 \author{Jonathan Sterling}
 
-\thanks{Thanks to Bob Harper, Peter Dybjer, Bengt Norstr\"om, Carlo Angiuli and
+\thanks{Thanks to Bob Harper, Peter Dybjer, Bengt Nordstr\"om, Carlo Angiuli and
 Darin Morrison for invaluable conversations which helped sharpen my view of the
 meaning explanations for computational and intensional type theories.}
 
