I'd mixed up the order of critiques

--- a/prooftheory.tex
+++ b/prooftheory.tex
@@ -348,9 +348,9 @@ new type.
 
 We will first try and address the easier of the two critiques by
 factoring the judgements of the logical framework in such a way as to
-permit different types to be defined in isolation, and then composed
-freely into theories. In order to simplify matters, we will restrict
-our syntax to normal forms, thus eliminating the need for a
+permit different types to be defined modularly in isolation, and then
+composed freely into theories. In order to simplify matters, we will
+restrict our syntax to normal forms, thus eliminating the need for a
 judgemental equality any more advanced than simple
 $\alpha$-equivalence.
 
@@ -673,7 +673,7 @@ exercise to the reader.
 In this chapter, a logical framework has been developed which, unlike
 Martin-L\"of's logical framework, permits the modular/separate
 definitions of types. On the other hand, we have \emph{not} addressed
-the second critique of \MLLF, which is that it lacks computational
+the first critique of \MLLF, which is that it lacks computational
 content.
 
 To make the framework truly computational, it would be necessary to
