fix typos in bib; add another M-L paper

--- a/refs.bib
+++ b/refs.bib
@@ -14,6 +14,23 @@
 	Volume = 104,
 	Year = 1982}
 
+@incollection{analytic-synthetic,
+year={1994},
+isbn={978-94-010-4359-5},
+booktitle={Kant and Contemporary Epistemology},
+volume={54},
+series={The University of Western Ontario Series in Philosophy of Science},
+editor={Parrini, Paolo},
+doi={10.1007/978-94-011-0834-8_5},
+title={Analytic and Synthetic Judgements in Type Theory},
+url={http://dx.doi.org/10.1007/978-94-011-0834-8_5},
+publisher={Springer Netherlands},
+author={Martin-L{\"o}f, Per},
+pages={87-99},
+language={English}
+}
+
+
 @book{PFPL,
  author = {Harper, Robert},
  title = {Practical Foundations for Programming Languages},
@@ -67,7 +84,7 @@
   author = {Dybjer, Peter},
   biburl = {http://www.bibsonomy.org/bibtex/29f58df148d7e4cd76ff17b2d1e022b68/dblp},
   booktitle = {Epistemology versus Ontology},
-  editor = {Dybjer, Peter and Lindström, Sten and Palmgren, Erik and Sundholm, Göran},
+  editor = {Dybjer, Peter and Lindstr{\"o}m, Sten and Palmgren, Erik and Sundholm, G{\"o}ran},
   ee = {http://dx.doi.org/10.1007/978-94-007-4435-6_11},
   interhash = {1f9271b1190a16b444a119667814a785},
   intrahash = {9f58df148d7e4cd76ff17b2d1e022b68},
@@ -87,7 +104,7 @@
   author = {Prawitz, Dag},
   biburl = {http://www.bibsonomy.org/bibtex/2ae143357cae66b26c4630bbcf16b4672/dblp},
   booktitle = {Epistemology versus Ontology},
-  editor = {Dybjer, Peter and Lindström, Sten and Palmgren, Erik and Sundholm, Göran},
+  editor = {Dybjer, Peter and Lindstr{\"o}m, Sten and Palmgren, Erik and Sundholm, G{\"o}ran},
   ee = {http://dx.doi.org/10.1007/978-94-007-4435-6_3},
   interhash = {db66878c8a975bb2ce7b3cfd77eeb576},
   intrahash = {ae143357cae66b26c4630bbcf16b4672},
@@ -192,7 +209,7 @@ doi={10.1007/BF00484985},
 title={Truth of a proposition, evidence of a judgement, validity of a proof},
 url={http://dx.doi.org/10.1007/BF00484985},
 publisher={Kluwer Academic Publishers},
-author={Martin-Löf, Per},
+author={Martin-L{\"o}f, Per},
 pages={407-420},
 language={English}
 }
