--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -6,7 +6,7 @@
 \chapter{Logical Theories}
 
 To start, we will consider the notion of a \emph{logical theory}; in
-my mind, it begins with a species (or set) of judgements that can be
+my mind, it begins with a species  of judgements that can be
 proposed, asserted, and (if they are evident) known.
 
 \section{Judgements of a logical theory}
@@ -22,13 +22,13 @@ The forms of judgement may be construed as containing
 \InputMode{\textit{input}} is something which is inspected in the course of
 knowing a judgement, whereas an \OutputMode{\textit{output}} is something which
 is synthesized (or created) in the course of knowing a judgement. The positions
-of \InputMode{\textit{inputs}} and \OutputMode{\textit{outputs}} in constitute
-for a judgement form what is called its \emph{mode}, and we color-code it in
-this presentation for clarity.\footnote{We will not see any judgements with
-\OutputMode{\textit{outputs}} at first, but it will become necessary as
-soon as we consider judgements about computation, where the reduction of a term
-is synthesized from the redex. Modes may be used to construe a judgement as
-having algorithmic content.}
+of \InputMode{\textit{inputs}} and \OutputMode{\textit{outputs}} in a judgement
+constitute what is called its \emph{mode}, and we color-code it in this
+presentation for clarity.\footnote{We will not see any judgements with
+  \OutputMode{\textit{outputs}} at first, but it will become necessary as soon
+  as we consider judgements about computation, where the reduction of a term is
+synthesized from the redex. Modes may be used to construe a judgement as having
+algorithmic content.}
 
 To each judgement is assigned a \emph{meaning explanation}, which explicates
 the knowledge-theoretic content of the judgement. For a judgement
