--- a/refs.bib
+++ b/refs.bib
@@ -222,7 +222,7 @@ language={English}
  publisher = {Springer Publishing Company, Incorporated},
 }
 
-@article{citeulike:5802354,
+@article{watkins,
     abstract = {{We present the propositional fragment CLF 0 of the Concurrent Logical Framework (CLF). CLF extends the Linear Logical Framework to allow the natural representation of concurrent computations in an object language. The underlying type theory uses monadic types to segregate values from computations. This separation leads to a tractable notion of definitional equality that identifies computations differing only in the order of execution of independent steps. From a logical point of view our type theory can be seen as a novel combination of lax logic and dual intuitionistic linear logic. An encoding of a small Petri net exemplifies the representation methodology, which can be summarized as  ”  concurrent computations as monadic expressions”.}},
     author = {Watkins, Kevin and Cervesato, Iliano and Pfenning, Frank and Walker, David},
     citeulike-article-id = {5802354},
