--- a/prooftheory.tex
+++ b/prooftheory.tex
@@ -514,7 +514,7 @@ to $M$ yields $E$.
 \begin{quote}
   To know $\hsubste{E}{x}{\ineu{R}}{\ineu{R'}}$ is to know that
 $\hsubstr{E}{x}{R}{R'}$; to know $\hsubste{E}{x}{\ineu{R}}{\ival{M}}$
-is to know that $\hsubstrm{E}{x}{R}{M}$; to know
+is to know that $\hsubstrm{E}{x}{R}{\ival{M}}$; to know
 $\hsubste{E}{x}{\ival{M}}{\ival{M'}}$ is to know that
 $\hsubstm{E}{x}{M}{M'}$.
 \end{quote}\medskip
