--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 \newcommand\eisset[2]{\ensuremath{\InputMode{#1}=\InputMode{#2}\;\mathit{type}}}
 \newcommand\istrue[1]{\ensuremath{\InputMode{#1}\;\mathit{true}}}
 \newcommand\isctx[1]{\ensuremath{\InputMode{#1}\;\mathit{ctx}}}
-\newcommand\fresh[2]{\ensuremath{\OutputMode{#1}\mathrel{\#}\InputMode{#2}}}
+\newcommand\fresh[2]{\ensuremath{\InputMode{#1}\mathrel{\#}\InputMode{#2}}}
 \newcommand\sequent[2]{\ensuremath{\InputMode{#1}\gg#2}}
 \newcommand\hyp[2]{\ensuremath{#1\ (#2)}}
 \newcommand\ahyp[2]{\ensuremath{#1 & (#2)}}
